fixed the list-style on mobile, should probably do something about that pink... >_>;;

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -9,6 +9,10 @@ ul{
     list-style-type: none;
     padding: .5em;
 }
+ol{
+    list-style-type: none;
+    padding: .5em;
+}
 ul li {
     /* display: inline-block; */
     vertical-align: top;
